[project]
name = "faulty-api-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiolimiter>=1.2.1",
    "httpx>=0.28.1",
    "orders-server",
    "ratelimit>=2.2.1",
]

[tool.uv.sources]
orders-server = { path = "vendor/orders_server-0.1.0.tar.gz" }
